WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65293
Incorrect arguments passed to LOG statement
https://bugs.webkit.org/show_bug.cgi?id=65293
Summary
Incorrect arguments passed to LOG statement
Pratik Solanki
Reported
2011-07-27 16:10:55 PDT
In
r91799
, I added LOG(Network, "Handle %p delegate connection:%p canAuthenticateAgainstProtectionSpace:%p", m_handle, connection); Three %p but only 2 arguments passed. Need to pass protectionSpace.
Attachments
Patch
(1.51 KB, patch)
2011-07-27 16:13 PDT
,
Pratik Solanki
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2011-07-27 16:13:19 PDT
Created
attachment 102200
[details]
Patch
Pratik Solanki
Comment 2
2011-07-27 17:14:19 PDT
Committed
r91885
: <
http://trac.webkit.org/changeset/91885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug