Incorrect arguments passed to LOG statement https://bugs.webkit.org/show_bug.cgi?id=65293

Reviewed by Oliver Hunt.

* platform/network/mac/ResourceHandleMac.mm:
(-[WebCoreResourceHandleAsDelegate connection:canAuthenticateAgainstProtectionSpace:]):

Canonical link: https://commits.webkit.org/81049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91885 268f45cc-cd09-0410-ab3c-d52691b4dbfc